--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "Kiko Plus"
+name:               "Eunji's world"
 
 author:
   facebook:         your-id
@@ -23,8 +23,8 @@ author:
   email:            your-id@your-email.com
 
 copyright:
-  year:             2017
-  name:             Kiko
+  year:             2019
+  name:             Eunji
 
 # Google-analytics
 google-analytics:
@@ -32,17 +32,17 @@ google-analytics:
 
 # Disqus
 disqus:
-  id:               "kiko-plus"
+  id:               #"kiko-plus"
 
 # URL
 url:                https://njikim.github.io # the base hostname & protocol for your site
 # url:                "http://localhost:4000" # use this url when you develop
-baseurl:            "/Kiko-plus" # the subpath of your site, e.g. /blog
+baseurl:            "" # the subpath of your site, e.g. /blog
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:           Asia/Seoul
-permalink:          /:year-:month-:day/:title/
+permalink:          /:year-:month-:day/:title/ #출력형식
 
 # Pagination
 paginate:           5
@@ -62,7 +62,7 @@ nav:
   - name:           "Tags"
     url:            "/tags"
   - name:           "Github"
-    url:            "https://github.com/AWEEKJ/Kiko-plus"
+    url:            "https://github.com/njikim"
 
 # Sass
 sass:
