--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
   github:            njikim
   #stackoverflow:    your-id
   #quora:            your-id
-  #linkedin:         your-id
+  linkedin:         eunjikim214@gmail.com
   #pinterest:        your-id
   #googlePlus:       your-id
   #instagram:        your-id
