added search on Navigation

--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ nav:
     url:            "/category"
   - name:           "Tags"
     url:            "/tags"
+  - name:           "Search"
+    url:            "/search"
   - name:           "Github"
     url:            "https://github.com/njikim"
 
